testdata/baselines/reference/submodule/compiler/crashRegressionTest.errors.txt
crashRegressionTest.ts(16,56): error TS2339: Property '_name' does not exist on type 'StringTemplate'.
crashRegressionTest.ts(21,16): error TS2322: Type '{}' is not assignable to type 'TemplateKeyValue'.
  Index signature for type 'string' is missing in type '{}'.
crashRegressionTest.ts(22,16): error TS2322: Type '{}' is not assignable to type 'TemplateKeyValue'.
  Index signature for type 'string' is missing in type '{}'.


==== crashRegressionTest.ts (3 errors) ====
    module MsPortal.Util.TemplateEngine {
        "use strict";
     
        interface TemplateKeyValue {
            [name: string]: string;
        }
     
        class StringTemplate {
            private _templateStorage: TemplateStorage;
     
            constructor(templateStorage: TemplateStorage) {
                this._templateStorage = templateStorage;
            }
     
            public text(value?: string): any {
                this._templateStorage.templateSources[this._name] = value;
                                                           ~~~~~
!!! error TS2339: Property '_name' does not exist on type 'StringTemplate'.
            }
        }
     
        export class TemplateStorage {
            public templateSources: TemplateKeyValue = {};
                   ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'TemplateKeyValue'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
            public templateData: TemplateKeyValue = {};
                   ~~~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'TemplateKeyValue'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
        }
    }
    